--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,24 @@ header.navbar-container {
     padding-block: 1rem;
     z-index: 999;
 }
+
+header.navbar-container .nav-list ul{
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+    gap: 2rem 1rem;
+}
+
+header.navbar-container .nav-list li {
+    list-style-type: none;
+}
+
+header.navbar-container .nav-list li a{
+    text-decoration: none;
+    font-size: 1.05rem;
+    font-weight: 500;
+    color: black;
+    padding: 0.5rem 1.rem;
+    border-radius: 999px;
+    transition: all 0.2s ease-in-out;
+}
